Spacing fix

--- a/views/application.sass
+++ b/views/application.sass
@@ -21,7 +21,7 @@ hr
 
 #container
   margin: 0 auto
-  width: 70%
+  width: 90%
 
 #cube_container
   overflow: hidden
@@ -30,7 +30,7 @@ hr
   float: left
   margin: 0.2em
   padding: 1em
-  width: 24em
+  width: 44%
   height: 15em
   box-shadow: 0 0 3px #767
   border-radius: 2px
@@ -83,7 +83,7 @@ hr
       color: white
 
 .big
-  font-size: 5em
+  font-size: 4em
 
 .small
   font-size: 0.8em
